--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@mdi/font": "^7.4.47",
+        "@mdi/js": "^7.4.47",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0"
@@ -13,8 +15,10 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
         "autoprefixer": "^10.4.19",
+        "material-design-icons-iconfont": "^6.7.0",
         "tailwindcss": "^3.4.3",
         "vue": "^3.4.27",
-        "vue-router": "^4.3.2"
+        "vue-router": "^4.3.2",
+        "vuetify": "^3.6.7"
     }
 }
