--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "tailwindcss": "^3.4.3",
         "vue": "^3.4.27",
         "vue-router": "^4.3.2",
-        "vuetify": "^3.6.7"
+        "vuetify": "^3.6.7",
+        "vuex": "^4.1.0"
     }
 }
