--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
         "autoprefixer": "^10.4.19",
+        "chart.js": "^4.4.3",
+        "date-fns": "^3.6.0",
         "material-design-icons-iconfont": "^6.7.0",
         "tailwindcss": "^3.4.3",
+        "vee-validate": "^4.13.1",
         "vue": "^3.4.27",
+        "vue-chartjs": "^5.3.1",
         "vue-router": "^4.3.2",
         "vuetify": "^3.6.7",
-        "vuex": "^4.1.0"
+        "vuex": "^4.1.0",
+        "vuex-persistedstate": "^4.1.0"
     }
 }
